--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="bg-zinc-700 flex flex-col md:flex-row  p-20 gap-3 text-center md:text-left rounded-xl"> 
     <div>
         <h1 class="text-5xl font-bold pb-2">Protect your Password</h1>
-        <p class="my-4 text-2xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, numquam?</p>
+        <p class="my-4 text-2xl">los sitios webs mas seguros </p>
         <button class="bg-indigo-500 px-3 py-2 hover:bg-indigo-400">
             Start now
         </button>
